highlighting, and help echoing in the minibuffer.

** The new variable next-error-recenter specifies how next-error should
recenter the visited source file.  Its value can be a number (for example,
0 for top line, -1 for bottom line), or nil for no recentering.

** The mode-line display a `@' if the default-directory for the current buffer
is on a remote machine, or a hyphen otherwise.

* Startup Changes in Emacs 23.1


* Incompatible Editing Changes in Emacs 23.1


* Editing Changes in Emacs 23.1

** New command kill-matching-buffers kills buffers whose name matches a regexp.

** Minibuffer changes:

*** isearch started in the minibuffer searches in the minibuffer history.
Reverse isearch commands (C-r, C-M-r) search in previous minibuffer
history elements, and forward isearch commands (C-s, C-M-s) search in
next history elements.  When the reverse search reaches the first history
element, it wraps to the last history element, and the forward search
wraps to the first history element.  When the search is terminated, the
history element containing the search string becomes the current.


* New Modes and Packages in Emacs 23.1

** css-mode to edit Cascading Style Sheets.

** bibtex-style-mode helps you write BibTeX's *.bst files.

** vera-mode to edit Vera files.

** socks.el (which had been part of W3) is now part of Emacs.

** minibuffer-indicate-depth-mode shows the minibuffer depth in the prompt.


* Changes in Specialized Modes and Packages in Emacs 23.1

** compilation-auto-jump-to-first-error tells `compile' to jump to
the first error encountered during compilations.

** In the `copyright' package, you can specify your copyright holders's names.
Only copyright lines with holders matching copyright-names-regexp will be
considered for update.

** VC
*** VC backends can provide completion of revision names.
*** VC has some support for Bazaar (bzr).

*** VC has some support for Mercurial (hg).
