@@ -48,6 +48,8 @@ recenter the visited source file.  Its value can be a number (for example,
 
 ** The mode-line display a `@' if the default-directory for the current buffer
 is on a remote machine, or a hyphen otherwise.
+** The new command balance-window-area balances windows both vertically
+and horizontally.
 
 * Startup Changes in Emacs 23.1
 
